--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Mapa de Entregáveis e Soluções - Gerenciamento Pleno</title>
+    <title>Mapa de Entregáveis e Soluções - Gerenciamento</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -152,9 +152,18 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>Mapa de Entregáveis e Soluções - Gerenciamento Pleno</h1>
-        <p>Visualização integrada dos sistemas</p>
-        <input type="text" id="searchInput" placeholder="Digite para buscar entregáveis..." style="margin-top: 15px; padding: 10px; width: 90%; border: none; border-radius: 5px; font-size: 16px;">
+        <h1>Mapa de Entregáveis e Soluções - Gerenciamento</h1>
+        <p>
+            O mapa de entregáveis e soluções de gerenciamento reúne modelos de soluções digitais que podem ser aplicadas a diversas 
+            disciplinas dentro dos contratos. Ela reúne soluções que já integram o ecossistema de soluções da 
+            TimeNow, que pode ser acessado pelo link: 
+            <a href="https://timenow.sharepoint.com/sites/ecossistemadesolucoes" target="_blank" style="color: white; font-weight: bold;">
+                Clique aqui
+            </a>, e soluções que já rodam em outros contratos.
+        </p>
+
+
+        <input type="text" id="searchInput" placeholder="Digite para buscar entregáveis..." style="margin-top: 15px; padding: 10px; width: 100%; border: none; border-radius: 5px; font-size: 16px;">
     </div>
     <ul class="tree" id="mainTree">
         <!-- Conteúdo será gerado pelo JavaScript -->
